Added two new pages - about and blog

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,6 +15,15 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
-    <h1>My Astro Site</h1>
+    <h1>Blog</h1>
+    <p>
+      I am still working through Astro's tutorial. This is the third
+      page on my website.
+    </p>
+    <ul>
+        <li>Projects</li>
+        <li>Workshops</li>
+        <li>Docs</li>
+    </ul>
   </body>
 </html>
